terminus-ui/scss/helpers/_layout.scss
/**
 * Fill the parent element
 *
 * @mixin take-space
 * @section Layout
 * @param $margin
 *  The amount of space between the edge of the parent. Default: 0
 * @example
 *  @include fill-parent;
 *  @include fill-parent(1em);
 */
@mixin take-space($margin: 0) {
  bottom: $margin;
  left: $margin;
  position: absolute;
  right: $margin;
  top: $margin;
}


/**
 * Pseudo element base styles
 *
 * @mixin psuedo
 * @section Layout
 * @param $display
 *  The display value (block/inline/etc)
 * @param $position
 *  The position style (absolute/static/etc)
 * @param $content
 *  The content value
 */
@mixin pseudo(
  $display: block,
  $position: absolute,
  $content: ''
) {
  content: $content;
  display: $display;
  position: $position;
}


/**
 * Control the ratio for responsive elements
 *
 * @mixin responsive-ratio
 * @section Layout
 * @param $x
 *  The x ratio
 * @param $y
 *  The y ratio
 * @param $pseudo
 *  Determine if a psuedo element should be used to control the ratio. Default: true
 * @param $image
 *  The image source. Default: null
 * @example
 *  @include responsive-ratio(3, 4);
 *  @include responsive-ratio(20, 9, true, url('/images/landing-hero.jpg'));
 */
@mixin responsive-ratio($x, $y, $pseudo: true, $image: null) {
  $padding: unquote((( $y / $x ) * 100) + '%');

  @if $x == null or $y == null {
    @error 'Both the x and y ratios must be passed in.';
  }

  @if $pseudo {
    &::before {
      @include pseudo($position: relative);
      padding-top: $padding;
      width: 100%;
    }
  } @else {
    padding-top: $padding;
  }

  @if image != null {
    background-image: url($image);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
  }
}


/**
 * Center child content vertically and horizontally
 *
 * @mixin center-content
 * @section Layout
 * @example
 *  @include center-content;
 */
@mixin center-content {
  align-items: center;
  display: flex;
  justify-content: center;
}


/**
 * Make content visually hidden
 *
 * @mixin visually-hidden
 * @section Layout
 * @example
 *  @include visually-hidden;
 */
@mixin visually-hidden {
  $smallest-adjustment: 1px;

  border: 0;
  clip-path: rect(0, 0, 0, 0);
  // Not all styles apply to inline elements
  display: block;
  height: $smallest-adjustment;
  margin: -$smallest-adjustment;
  overflow: hidden;
  padding: 0;
  pointer-events: none;
  position: absolute;
  width: $smallest-adjustment;
}

